# fcm-device-groups

./: .gitignore  Cargo.toml
examples/: fcm_device_group_cli.rs
src/: api_urls.rs  error.rs  lib.rs  raw.rs
src/raw/: device_groups.rs  mod.rs  topics.rs
