[package]
name = "fcm-device-group"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Rust crate for managing Firebase Cloud Messaging device groups"
keywords = ["fcm"]
repository = "https://github.com/MaticianInc/fcm-device-groups"

[features]
default = ["default-tls"]

default-tls = ["reqwest/default-tls"]

[dependencies]
google-apis-common = "7.0"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = "1.0.215"
thiserror = "2.0.10"
log = "0.4.28"


[dev-dependencies]
clap = {version = "4.5.47", features = ["derive", "env"] }
env_logger = "0.11.8"
reqwest = { version = "0.12", default-features = true }
tokio = {version = "1.47.1", features = ["rt"]}
google-apis-common = { version = "7.0", features = ["yup-oauth2"]}
yup-oauth2 = "11.0.0"
